--- a/configs/layout_detection_layoutlmv3.yaml
+++ b/configs/layout_detection_layoutlmv3.yaml
@@ -1,7 +1,8 @@
-inputs: assets/demo/layout_detection
+inputs: assets/test
 outputs: outputs/layout_detection
 tasks:
   layout_detection:
     model: layout_detection_layoutlmv3
     model_config:
       model_path: models/Layout/LayoutLMv3/model_final.pth
+      visualize : True
